fix color for links, fix spacing for side panel on mobile, add breadcrumbs to section and subsection

--- a/blog/css/app.css
+++ b/blog/css/app.css
@@ -3209,7 +3209,6 @@ li.nav-tabs-dropdown {
   align-items: center;
   justify-content: space-between;
   color: #000 !important;
-  border-bottom: 1px solid #e5e5e5;
 }
 .appartments__item:hover {
   text-decoration: none;
@@ -3219,6 +3218,9 @@ li.nav-tabs-dropdown {
 }
 .appartments__item:first-child {
   border-top: 1px solid #e5e5e5;
+}
+.appartments__item {
+  border-bottom: 1px solid #e5e5e5;
 }
 .appartments__item.active {
   border-bottom: 1px solid transparent;
@@ -5626,6 +5628,15 @@ footer {
 .blog a:hover {
   color: #2167b4;
 }
+.blog a.btn.btn-default {
+  color: #242a3e;
+}
+.blog a.btn.btn-default:hover {
+  color: #084c95;
+}
+.blog a.btn.btn-primary {
+  color: #fff;
+}
 .blog blockquote {
   padding: 0;
   margin: 0;
@@ -5635,14 +5646,14 @@ footer {
 .blog .hidden {
   display: none !important;
 }
+.blog .with_sidebar-rigth::before, .blog .with_sidebar-rigth::after {
+  display: none;
+}
 .blog .with_sidebar-rigth {
   display: grid;
   grid-template-columns: 820px 300px;
   gap: 20px;
   width: 100%;
-}
-.blog .with_sidebar-rigth::before, .blog .with_sidebar-rigth::after {
-  display: none;
 }
 @media (max-width: 1200px) {
   .blog .with_sidebar-rigth {
@@ -5681,9 +5692,6 @@ footer {
 .blog .color_design {
   background-color: #f9f5f9;
 }
-.blog .btn.btn-default {
-  transition: all ease 0.2s;
-}
 .blog .btn.btn-default.white-border {
   border-color: #fff;
   text-decoration: none;
@@ -5700,6 +5708,9 @@ footer {
 .blog .btn.btn-default.activated:hover, .blog .btn.btn-default.activated:active {
   color: #fff;
   background-color: #084c95;
+}
+.blog .btn.btn-default {
+  transition: all ease 0.2s;
 }
 .blog .blog-tag {
   border: 1px solid #e6eff9;
@@ -5833,12 +5844,14 @@ footer {
   height: 100%;
   display: flex;
   flex-direction: column;
-  text-decoration: none;
 }
 @media (max-width: 767px) {
   .blog .article-preview__in-img {
     height: 330px;
   }
+}
+.blog .article-preview__in-img {
+  text-decoration: none;
 }
 .blog .article-preview__in-img:hover {
   text-decoration: none;
@@ -6326,10 +6339,6 @@ footer {
 .blog .form-group.search-input.selectize-input input {
   padding-left: 24px !important;
 }
-.blog .form-group.search-input .btn.clear-input {
-  display: none;
-  padding: 0 14px;
-}
 @media (hover: none) {
   .blog .form-group.search-input .btn.clear-input:focus {
     -webkit-tap-highlight-color: transparent;
@@ -6341,6 +6350,10 @@ footer {
   .blog .form-group.search-input .btn.clear-input.view {
     display: flex;
   }
+}
+.blog .form-group.search-input .btn.clear-input {
+  display: none;
+  padding: 0 14px;
 }
 .blog .form-group.search-input .btn.clear-input svg {
   position: static;
@@ -6742,7 +6755,6 @@ footer {
     display: flex;
     flex-direction: column;
     height: 100%;
-    margin-bottom: 65px;
   }
 }
 .blog .main-section-group .section-pop {
@@ -6781,10 +6793,6 @@ footer {
   overflow-x: auto;
   margin-top: 15px;
   gap: 5px;
-  /* hide scrollbar by default */
-  -ms-overflow-style: none; /* IE, Edge */
-  scrollbar-width: none; /* Firefox */
-  /* show thin styled scrollbar on hover */
 }
 .blog .tags-scroll-container.absolute {
   position: absolute;
@@ -6800,8 +6808,16 @@ footer {
     width: calc(100vw - 30px);
   }
 }
+.blog .tags-scroll-container {
+  /* hide scrollbar by default */
+  -ms-overflow-style: none; /* IE, Edge */
+  scrollbar-width: none; /* Firefox */
+}
 .blog .tags-scroll-container::-webkit-scrollbar {
   height: 0;
+}
+.blog .tags-scroll-container {
+  /* show thin styled scrollbar on hover */
 }
 .blog .tags-scroll-container:hover {
   -ms-overflow-style: auto;
@@ -7082,6 +7098,11 @@ footer {
   position: sticky;
   margin-bottom: 20px;
 }
+@media (min-width: 992px) {
+  .blog .blog_article__sidebar-container.mobile {
+    display: none;
+  }
+}
 .blog .blog_article__sidebar-container.mobile {
   padding: 10px;
   border-radius: 8px;
@@ -7089,11 +7110,6 @@ footer {
   margin-bottom: 15px;
   position: relative;
   top: unset;
-}
-@media (min-width: 992px) {
-  .blog .blog_article__sidebar-container.mobile {
-    display: none;
-  }
 }
 .blog .blog_article__sidebar-container.mobile .head {
   display: flex;
@@ -7335,6 +7351,9 @@ footer {
 }
 .blog article p + ol {
   margin-top: 15px;
+}
+.blog article span.strong {
+  font-weight: 700;
 }
 .blog article ul {
   margin-bottom: 30px;
